feat: mejoras de seguridad, listeners y vistas Pebble